# hive-terminal

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN_CLIENT_INTEGRATION.md  PLAN_HIVE_SERVER.md  README.md  architecture.md  dart_test.yaml  improvements.md  plan-auto-update.md  plan-ru-drag-and-drop-terminals.md  pubspec.yaml  run.sh
.github/workflows/: ci.yml  release.yml
RESEARCH/: stack-analysis-phase1.md
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/hive/: hive_client.dart  (+3 more)
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
server/: CLAUDE.md  Cargo.toml  README.md  build.rs  docker-compose.yml
server/migrations/: 20241201000001_initial.sql
server/proto/: hive.proto
server/src/: lib.rs  main.rs
server/src/api/: auth.rs  connections.rs  mod.rs  sessions.rs
server/src/cli/: mod.rs
server/src/db/: models.rs  pool.rs
server/src/ssh/: client.rs  mod.rs  session.rs
server/src/terminal/: manager.rs  mod.rs  service.rs
server/tests/: auth_test.rs  connection_test.rs  ssh_test.rs  terminal_test.rs
test/: hive_client_test.dart  hive_connections_service_test.dart  hive_server_service_test.dart  hive_terminal_service_test.dart  settings_manager_test.dart  split_view_test.dart  update_service_test.dart  widget_test.dart  workspace_manager_test.dart
test/integration/: e2e_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
