[package]
name = "hive-server"
version = "0.1.0"
edition = "2021"
description = "Self-hosted SSH session server for Hive Terminal"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# SSH
russh = "0.46"
russh-keys = "0.46"

# Auth & Crypto
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "hive-server"
path = "src/main.rs"
